--- a/src/dockerfile
+++ b/src/dockerfile
@@ -5,3 +5,4 @@ RUN python -m pip install -r requirements.txt
 COPY . /app
 EXPOSE 5000
 CMD [ "gunicorn", "--workers=3", "--bind", "0.0.0.0:5000", "app:app" ]
+#bruno
