--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,10 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+      - name: Docker Login
+        with:
+          username:${{sercrets.DOCKERHUB_USER}}
+          password:${{sercrets.DOCKERHUB_PWD}}
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.6.1
         with:
