--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI-CD
+name: CI/CD
 on:
   push:
     branches: [ main ]
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Docker Login
+        with:
+          username:${{sercrets.DOCKERHUB_USER}}
+          password:${{sercrets.DOCKERHUB_PWD}}
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.6.1
         with:
