--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Docker Login
+        uses: docker/login-action@v1.10.0
         with:
           username: ${{ sercrets.DOCKERHUB_USER }}
           password: ${{ sercrets.DOCKERHUB_PWD }}
