--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       - name: Docker Login
         uses: docker/login-action@v1.10.0
         with:
-          username: ${{ sercrets.DOCKERHUB_USER }}
-          password: ${{ sercrets.DOCKERHUB_PWD }}
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_PWD }}
       - name: Build and push Docker images
         uses: docker/build-push-action@v2.6.1
         with:
