--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           push: true
           tags: |
             bmichelad/rotten-potatoes:latest
-            bmichelad/rotten-potatoes:${{github.run_number}}
+            bmichelad/rotten-potatoes:${{ github.run_number }}
 
   CD:
     runs-on: ubuntu-latest
@@ -41,3 +41,9 @@ jobs:
           manifests: |
             k8s/mongodb/deployment.yaml
             k8s/mongodb/service.yaml
+      - name: Deploy WEB
+        uses: Azure/k8s-deploy@v1
+        with:
+          manifests: |
+            k8s/web/deployment.yaml
+          images: bmichelad/rotten-potatoes:${{ github.run_number }}
